# event-switchyard

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  README.md  bench.sh  build.gradle  docker-compose.monitoring.yml  docker-compose.rust.yml  docker-compose.yml  grafana-dashboards.yml  prometheus.yml  requirements.txt  review.yml  settings.gradle
.github/: pull_request_template.md
ai-assist/: build.gradle
app/: build.gradle
app-java/: build.gradle
backoffice/: build.gradle
backoffice-java/: build.gradle
baseline/: perf_gate_rust.json  perf_gate_rust_local.json  seed.json
bench/: bench.sh  run_canary.sh
contracts/: amend_decision_v1.schema.json  anchor_spec_v1.txt  bench.v1.schema.json  bus_event_v1.schema.json  bus_event_v2.schema.json  canary_result_v1.schema.json  order_request_v1.schema.json  order_state_transition_v1.schema.json  position_cap_v1.schema.json  reject_reason_v1.schema.json  (+2 more)
frontend/: index.html  (+3 more)
gateway-core/: Cargo.toml
gateway-core/benches/: fastpath.rs
gateway-core/src/: ffi.rs  lib.rs  metrics.rs  queue.rs  risk.rs
gateway-rust/: Cargo.toml  Dockerfile
gateway-rust/.cargo/: config.toml
gateway-rust/src/: audit_mirror.rs  backpressure.rs  config.rs  inflight.rs  main.rs  rate_limit.rs
gateway-rust/src/audit/: mod.rs
gateway-rust/src/auth/: mod.rs
gateway-rust/src/bus/: mod.rs
gateway-rust/src/engine/: drain_worker.rs  exchange_worker.rs  fast_path.rs  mod.rs
gateway-rust/src/exchange/: client.rs  control.rs  mod.rs  protocol.rs
gateway-rust/src/order/: mod.rs
gateway-rust/src/outbox/: mod.rs
gateway-rust/src/protocol/: mod.rs
gateway-rust/src/server/: http.rs  mod.rs  tcp.rs
gateway-rust/src/server/http/: audit.rs  durable_control.rs  metrics.rs  mod.rs  orders.rs  routes.rs  sse.rs  startup_rebuild.rs  strategy.rs  strategy_read.rs  tcp.rs  worker_pipeline.rs  worker_runtime.rs  workers.rs
gateway-rust/src/server/http/orders/: classic.rs  response.rs  support.rs  tcp_codec.rs  tests.rs
gateway-rust/src/server/http/orders/tests/: classic.rs  fixtures.rs  strategy.rs  v3.rs
gateway-rust/src/server/http/strategy/: support.rs  tests.rs  write.rs
gateway-rust/src/server/http/strategy_read/: support.rs  tests.rs
gateway-rust/src/sse/: mod.rs
gateway-rust/src/store/: id_map.rs  mod.rs  sharded.rs  strategy_runtime_store.rs  strategy_shadow_store.rs  strategy_snapshot.rs
gateway-rust/src/strategy/: algo.rs  alpha_redecision.rs  catchup.rs  config.rs  feedback.rs  intent.rs  market_input.rs  mod.rs  replay.rs  runtime.rs  shadow.rs  sink.rs
(+698 files in other folders)
