[package]
name = "gateway-core"
version = "0.1.0"
edition = "2024"
description = "Ultra-low latency order gateway core in Rust"
authors = ["wsmaking"]

[dependencies]
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fastpath"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
