[package]
name = "gateway-rust"
version = "0.1.0"
edition = "2024"
description = "Full Rust implementation of the order gateway"
authors = ["wsmaking"]

[dependencies]
# コアライブラリ（queue, risk, metrics）
gateway-core = { path = "../gateway-core" }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# io_uring ランタイム (Linux only)
monoio = { version = "0.2", optional = true }

# HTTP サーバー
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# シリアライゼーション
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 設定
dotenvy = "0.15"

# エラー処理
anyhow = "1"

# JWT 認証
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# UUID 生成
uuid = { version = "1", features = ["v4"] }

# Lock-free concurrent hashmap
dashmap = "6"

# SSE / Streaming
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Kafka (Rust client, uses system librdkafka via pkg-config)
rdkafka = { version = "0.36", features = ["dynamic-linking"] }

[features]
default = []
iouring = ["monoio"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "gateway-rust"
path = "src/main.rs"

[[bin]]
name = "gateway-iouring"
path = "src/bin/iouring.rs"
required-features = ["iouring"]
